[workspace]
resolver = "3"
members = ["./r_egl", "r_egl_wayland"]

[workspace.dependencies]
gl = "^0.14"
wayland-client = "^0.31"
wayland-protocols = "^0.32"
wayland-egl = "^0.32"
r_egl = { path = "./r_egl", version = "1.0.0" }

[workspace.package]
version = "0.1.0"
authors = [
	"Timothée Haudebourg <author@haudebourg.net>",
	"Sean Kerr <sean@metatomic.io>",
	"Decodertalkers <aakari@tutanota>",
]
license = "MIT/Apache-2.0"
edition = "2024"
